# website

./: .gitignore  flake.nix  stack.yaml  upload-website.sh  website.cabal
for-upload/css/: ripley.css
for-upload/js/: search.js
src/: Authors.hs  Links.hs  Main.hs  WebsiteTools.hs  authors-array.json  papers.yaml  presentations.hs  presentations.yaml  website.hs  writing-template.yaml  writing.hs  writing.yaml
