name:                website
version:             0.1.0.0
synopsis:            Website
description:         Please see README.md
homepage:            http://davewripley.rocks
license:             BSD3
license-file:        LICENSE
author:              David Ripley 
maintainer:          davewripley@gmail.com
copyright:           2015 David Ripley
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable website
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Authors
                     , Links
                     , Presentations
                     , Website
                     , WebsiteTools
                     , Writing
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lucid
                     , text
                     , containers
                     , bytestring
                     , directory
