name:                website
version:             0.1.0.0
synopsis:            Website
description:         Please see README.md
homepage:            http://davewripley.rocks
license:             BSD3
license-file:        LICENSE
author:              David Ripley 
maintainer:          davewripley@gmail.com
copyright:           2015 David Ripley
category:            Web
build-type:          Simple
cabal-version:       2.0

executable website
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Authors
                     , Links
                     , Presentations
                     , Website
                     , WebsiteTools
                     , Writing
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson ^>= 1.5
                     , lucid ^>= 2.9.12
                     , text ^>= 1.2.4
                     , containers ^>= 0.6
                     , bytestring ^>= 0.10.12
                     , directory ^>= 1.3.6
                     , yaml ^>= 0.11.5
